--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "ejs": "~2.5.2",
-    "express": "~4.14.0",
-    "express-rate-limit": "^3.5.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^3.5.3",
     "morgan": "~1.9.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
