--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dumb-shit",
-  "version": "0.0.0",
+  "name": "guess-evans-bg",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
